Downgraded to Java 1.8